--- a/index.html
+++ b/index.html
@@ -1,5 +1,43 @@
 hello Yext
 
-<p><input id="x">+</p>
+<style>
+input {
+    width: 80%;
+    height: 30px;
+    border-radius: 10px; 
+
+}
+</style>
+<div style:"padding-left:15%;padding-right:15%">
+    <div>
+        <p><input id="main">+</p>
+    </div>
+
+    <div id="additional-fields"> 
+        <div class="search-insurance">
+            <select name="Insure" id="Insure" class="search-insurance">
+                <option SELECTED value="">Filter By Insurance</option>
+            </select>
+        </div>
+
+        <div class="search-gender">
+            <select name="Gender" id="Gender" class="search-gender">
+                <option SELECTED value="Gender"></option>
+                <option value="Male"></option>
+                <option value="Female"></option>
+            </select>
+        </div>
+
+    <input type="">
+
+    <input id="">
+
+
+    </div>
+</div>
+
+<script async type="text/javascript" src="populate-dropdowns.js"></script>
+
+
 
 <script src="yext.js"></script>
