added "pediatric/adult" search field

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@ input {
                 <option value="Male"></option>
                 <option value="Female"></option>
             </select>
+         <div class="search-Pediatric/Adult"
+            <select name="Pediatric/Adult" id="Pediatric/Adult" class="search-Pediatric/Adult"
+                <option SELECTED value="Pediatric/Adult"
+                <option value= "Adult"
+                <option value= "Pediatric"
+                <option value= "All"
+            </select>    
         </div>
 
     <input type="">
