added some more fields

--- a/index.html
+++ b/index.html
@@ -19,21 +19,24 @@ input {
                 <option SELECTED value="">Filter By Insurance</option>
             </select>
         </div>
-
         <div class="search-gender">
             <select name="Gender" id="Gender" class="search-gender">
                 <option SELECTED value="Gender"></option>
                 <option value="Male"></option>
                 <option value="Female"></option>
             </select>
+          </div>  
          <div class="search-Pediatric/Adult"
             <select name="Pediatric/Adult" id="Pediatric/Adult" class="search-Pediatric/Adult"
                 <option SELECTED value="Pediatric/Adult"
-                <option value= "Adult"
-                <option value= "Pediatric"
-                <option value= "All"
+                <option value= "Adult"></option>
+                <option value="Male"></option>
+                <option value= "Pediatric"></option>
+                <option value="Male"></option>
+                <option value= "All">
             </select>    
         </div>
+        
 
     <input type="">
 
