Fixed Typing Errors

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ input {
                 <option value="Female"></option>
             </select>
           </div>  
-         <div class="search-Pediatric/Adult"
-            <select name="Pediatric/Adult" id="Pediatric/Adult" class="search-Pediatric/Adult"
-                <option SELECTED value="Pediatric/Adult"
+         <div class="search-Pediatric/Adult">
+            <select name="Pediatric/Adult" id="Pediatric/Adult" class="search-Pediatric/Adult">
+                <option SELECTED value="Pediatric/Adult"></option>
                 <option value= "Adult"></option>
                 <option value="Male"></option>
                 <option value= "Pediatric"></option>
