--- a/index.html
+++ b/index.html
@@ -10,31 +10,7 @@ input {
 
 <script src="InputManager.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-
-<script>
-/*
-function mainTextFieldChanged() {
-        var textField = document.getElementById("main")
-        var additional = document.getElementById("additional-fields")
-
-        console.log("keyed up on main search field")
-        
-        if (textField.value == 0) {
-            additional.style="visibility:hidden"
-            console.log("should show")
-
-            // Update UI to show Specialties - need to get from Yext
-
-            
-
-        } else {
-            additional.style="visibility:visible"
-            console.log("should not show")
-
-        }
- }
-     */
- </script>
+<script src="updateDB.js"></script>
 
 
 <body style="background-color:#ca7272">
@@ -42,7 +18,7 @@ function mainTextFieldChanged() {
 
 <br>
     <div >
-        <p><input id="main" onKeyUp="mainTextFieldChanged()" placeholder="Specialty, Condition, Treatment..."></p>
+        <p><input id="main" type="text" onKeyUp="mainTextFieldChanged()" placeholder="Specialty, Condition, Treatment..."></p>
     </div>
     <script src="InputManager.js"></script>
 
