Added box for yext results to be displayed in

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@ input {
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtZvb0AIUJCiKc008_nmuu_jikJigt2B4&callback=initMap">
     </script>
-
  </div>
 <center>
     
@@ -98,11 +97,11 @@ input {
                 </select>       
                 <br>
                 <br>
-                
             </div>
          </div>
     </div>
 </center>
+ <div style="width:200px;height:655px;border:1px solid #000;border-radius: 25px;background: #FFFFFF; align="left";margin-left:10%;margin-top:20%>Yext Search Results Go Here</div>
 </body>
 <script async src="populate-dropdowns.js"></script>
 
