--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ container-main input[type="text"], .search-location input[type="text"] {
 
 <script src="InputManager.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<!-- <script src="updateDB.js"></script> -->
+ <!-- /* <script src="updateDB.js"></script>  */ -->
 <script>
 /*
         console.log("keyed up on main search field")
