i don't even know

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ container-main input[type="text"], .search-location input[type="text"] {
 </script>
 
 <body>
- <div id="map" style="z-index: -1; position:absolute;width:100%;height:100%">
+
+<center>
+     <div id="map" style="z-index: -1; position:absolute;width:100%;height:100%">
     <script>
       function initMap() {
         var uluru = {lat: 40.915472, lng: -73.122721};
@@ -123,10 +125,8 @@ container-main input[type="text"], .search-location input[type="text"] {
     </script>
 
  </div>
-<center>
-    
     <div id="search-view" style="z-index:123;position:absolute;align-content:left;;
-    opacity:25;width:100%";>
+    opacity:25;width:100%;height:400px";>
    
     <br>
     <script src="InputManager.js"></script>
