Proxy nearly finished. Has date checking now.

--- a/index.html
+++ b/index.html
@@ -76,27 +76,7 @@ container-main input[type="text"], .search-location input[type="text"] {
 
 <script src="InputManager.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
- <!-- /* <script src="updateDB.js"></script>  */ -->
-<script>
-/*
-        console.log("keyed up on main search field")
-        
-        if (textField.value == 0) {
-            additional.style="visibility:hidden"
-            console.log("should show")
-
-            // Update UI to show Specialties - need to get from Yext
-
-            
-
-        } else {
-            additional.style="visibility:visible"
-            console.log("should not show")
-
-        }
- }
-     */
-</script>
+<script src="DataManager.js"></script>  
 
 
 <body>
