--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ container-main input[type="text"], .search-location input[type="text"] {
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="DataManager.js"></script>
- <script>
+ <!-- <script>
     updateData().then(function() {
             console.log("Finished.")
         console.log("Successfully updated database with count: ",localArray.length)
@@ -83,7 +83,7 @@ container-main input[type="text"], .search-location input[type="text"] {
         statusLabel.innerText = "Complete!"
     })
 
-</script> 
+</script>  -->
 
 <script src="InputManager.js"></script>
 
